Ejercicio 01 - Arreglo bug

--- a/Ejercicio_01/index.html
+++ b/Ejercicio_01/index.html
@@ -56,10 +56,10 @@
                     </div>
                 </div>
 			</div>
-			<div class="row">
+			<div class="row mt-5">
                 <div id="bottom-container" class="col d-flex flex-column">
-                    <div class="row-bottom-text">Login with</div>
-                    <div class="row-bottom-nets">
+                    <div class="row-bottom-text d-flex justify-content-center">Login with</div>
+                    <div class="row-bottom-nets d-flex justify-content-center flex-wrap mt-5">
                         <div class="net-container">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
                                 <path
